--- a/spielregeln.tex
+++ b/spielregeln.tex
@@ -28,7 +28,7 @@
 \def\raumgg{25.22.U1.25}
 \def\spielh{Parabelflug}
 \def\raumh{DRAUSSEN}
-\def\spieli{Pi$\times $Daumen}
+\def\spieli{$\Pi\times $Daumen}
 \def\raumi{25.22.U1.34}
 \def\spielj{Kleiderkette}
 \def\raumj{}
@@ -63,11 +63,13 @@ Ihr habt zehn Minuten Zeit, um mit einem Kilogramm Zeitung eine Brücke zu bauen
  \item Eimer
  \item 10 Pakete Zucker
  \item min. 18kg Zeitungen
+ \item Gießkanne o.ä.
 \end{itemize}
 \subsection*{Punkte:}
 Anzahl der Zuckertüten, die in den Eimer gelegt werden konnten, bevor die Brücke einbrach. 10, falls alle Tüten getragen wurden.
 
 \subsection*{Hinweise:}  
+Die Dosen müssen mit ein wenig Wasser gefüllt werden, damit sie nicht vom Wind umgeweht werden können.
 \unten
 
 \newpage
@@ -84,11 +86,12 @@ Anzahl der Zuckertüten, die in den Eimer gelegt werden konnten, bevor die Brüc
 Ihr müsst einen aus vier Etappen bestehenden Staffellauf bewältigen. 
 Der Staffellauf besteht aus Eierlauf, Sackhüpfen, einem Dosenparcours und 
 Dreibeinlauf. Sobald eine Etappe bewältigt wurde, darf die nächste begonnen
-werden. Für umgeworfene Hindernisse werden Strafsekunden zu eurer Zeit 
+werden. Pro umgeworfene Voltdose werden 10 Strafsekunden zu eurer Zeit 
 addiert. Zwei Teams starten gleichzeitig an gegenüberliegenden Etappen.
 
 \section*{Für die Spielleiter:}
 \subsection*{Punkte:}
+Strafsekunden: 10 Sekunden/VoltDose\\
 Gemessene Zeit inklusive Strafsekunden. Je kürzer desto besser.
 
 \subsection*{Hinweise:}
@@ -105,7 +108,7 @@ Gemessene Zeit inklusive Strafsekunden. Je kürzer desto besser.
 
 \Large
 \section*{Für die Spieler:}
-Ihr habt 10 Minuten Zeit. Innerhalb dieser 10 Minuten müssen Bausteine unten aus dem Turm genommen werden und oben wieder aufgelegt werden. Steine dürfen aus jeder Ebene unterhalb der obersten vollständigen Ebene entnommen werden. Zum Spielen darf nur eine Hand verwendet werden. Ihr spielt reihum, es kommt also jeder dran. Solange der Turm sicher steht, wird gezählt, wie viele Steine ihr aufstapelt. Fällt der Turm um, wird eure bisherige Punktzahl für diesen Turm quadriert. Wer zuletzt den Turm berührt hat, muss trinken. Ihr dürft den Turm nun neu aufbauen und von vorne anfangen, bis die Zeit abgelaufen ist. Punkte, die ihr einmal erreicht habt verliert ihr nicht mehr.
+Ihr habt 10 Minuten Zeit. Innerhalb dieser 10 Minuten müssen Bausteine unten aus dem Turm genommen werden und oben wieder aufgelegt werden. Steine dürfen aus jeder Ebene unterhalb der obersten vollständigen Ebene entnommen werden. Zum Spielen darf nur eine Hand verwendet werden. Ihr spielt reihum, es kommt also jeder dran. Solange der Turm sicher steht, wird gezählt, wie viele Steine ihr aufstapelt. Fällt der Turm um, wird eure bisherige Punktzahl für diesen Turm quadriert. Wer zuletzt am Zug war, muss trinken. Ihr dürft den Turm nun neu aufbauen und von vorne anfangen, bis die Zeit abgelaufen ist. Punkte, die ihr einmal erreicht habt verliert ihr nicht mehr.
 
 \section*{Für die Spielleiter:}
 \subsection*{Requisiten:}
@@ -131,7 +134,7 @@ Sei der Turm $n$ mal wieder aufgebaut worden und $t_i$ die Anzahl Steine, die in
 
 \Large
 \section*{Für die Spieler:}
-Im In$\Phi$Ma-Duell treten zwei Gruppen gleichzeitig an. Wie in der bekannten TV-Show Familienduell haben auch wir fast 100 Leute zu verschiedenen Themen gefragt und ihre Antworten gesammelt. Die Fragen, die wir Ihnen gestellt haben nennen wir euch ebenfalls. Jede Gruppe schreibt die Antwort, von der sie glaubt, dass sie am häufigsten genannt wurde, auf ihre Tafel. Ihr bekommt Punkte, wenn diese Antwort unter den Top Antworten war, und zwar so viele, wie Menschen sie genannt haben. Anschließend stellen wir euch die Frage ein weiteres Mal und ihr dürft eine weitere (noch nicht genannte) Antwort geben. Für jede Antwort habt ihr 20 Sekunden Zeit. Wir spielen maximal 10 Minuten oder 15 Fragen lang.
+Im In$\Phi$Ma-Duell treten zwei Gruppen gleichzeitig an. Wie in der bekannten TV-Show Familienduell haben auch wir fast 100 Leute zu verschiedenen Themen gefragt und ihre Antworten gesammelt. Die Fragen, die wir Ihnen gestellt haben nennen wir euch ebenfalls. Jede Gruppe schreibt die Antwort, von der sie glaubt, dass sie am häufigsten genannt wurde, auf ihre Tafel. Ihr bekommt Punkte, wenn diese Antwort unter den häufigsten Antworten war, und zwar so viele, wie Menschen sie genannt haben. Anschließend stellen wir euch die Frage ein weiteres Mal und ihr dürft eine weitere (noch nicht genannte) Antwort geben. Für jede Antwort habt ihr 20 Sekunden Zeit. Wir spielen maximal 10 Minuten oder 15 Fragen lang.
 
 \section*{Für die Spielleiter:}
 \subsection*{Requisiten:} 
@@ -144,7 +147,7 @@ Im In$\Phi$Ma-Duell treten zwei Gruppen gleichzeitig an. Wie in der bekannten TV
 \end{itemize}
 
 \subsection*{Punkte:}
-Für die Anzahl an Menschen die die selbe Antwort gegeben haben wie die Gruppe. Es ist nicht nötig, dass der selbe Wortlaut gewählt wurde! Die Punkte aus allen Runden werden addiert. 
+Für die Anzahl an Menschen, die die selbe Antwort gegeben haben wie die Gruppe. Es ist nicht nötig, dass der selbe Wortlaut gewählt wurde! Die Punkte aus allen Runden werden addiert. 
 
 \subsection*{Hinweise:}
 \unten
@@ -160,18 +163,18 @@ Für die Anzahl an Menschen die die selbe Antwort gegeben haben wie die Gruppe. 
 
 \Large
 \section*{Für die Spieler:}
-Es gibt zwei Spielleiter und drei Aktionen mit zugehörigere gegenteiliger Aktion: 
+Es gibt zwei Spielleiter und drei Aktionen mit zugehöriger gegenteiliger Aktion: 
 \begin{itemize}
  \item Hut an- oder ausziehen
  \item trinken oder nicht trinken
  \item sitzen oder stehen
 \end{itemize}
-Einer der Spielleiter macht euch eine beliebige Abfolge dieser Aktionen vor und ihr müsst immer das Gegenteil tun. Der andere Spielleiter stoppt dies nach einer pro Runde länger werdenden Zeit. Jeder muss zu diesem Zeitpunkt erstarren. Alle, die nicht genau das Gegenteil von dem tun, was der Spielleiter gerade tut scheiden aus. Eure Punkte bekommt ihr nach folgender Formel:\\
+Ihr spielt 10 Minuten. Einer der Spielleiter macht euch eine beliebige Abfolge dieser Aktionen vor und ihr müsst immer das Gegenteil tun. Der andere Spielleiter stoppt dies nach einer pro Runde länger werdenden Zeit. Jeder muss zu diesem Zeitpunkt erstarren. Alle, die nicht genau das Gegenteil von dem tun, was der Spielleiter gerade tut scheiden aus. Eure Punkte bekommt ihr nach folgender Formel:\\
 $$\sum\limits_{i=1}^{10}i \cdot |\mbox{Mitspieler in Runde}  (i+1)|$$
 
 
 \section*{Für die Spielleiter:}
-\subsection*{Requisiten:}\\
+\subsection*{Requisiten:}
 \begin{itemize}
  \item Becher und Getränke
  \item Zeitungshüte
@@ -194,7 +197,7 @@ $$\sum\limits_{i=1}^{10}i \cdot |\mbox{Mitspieler in Runde} (i+1)|$$
 
 \Large
 \section*{Für die Spieler:}
-Es spielen zwei Gruppen gegeneinander. Jede Gruppe wählt abwechselnd eine Kategorie und Schwierigkeitsstufe. Daraufhin wird euch allen eine Antwort gezeigt und ihr (beide Gruppen) müsst die zugehörige Frage auf eure Tafel schreiben. Für jede Frage habt ihr Zeit, bis die Jeopardy Melodie abgelaufen ist. Ihr spielt für 10 Minuten und beantwortet maximal 10 Antworten. Ist die gewählte Frage korrekt bekommt ihr die zugehörige Punktzahl guteschrieben sonst wird sie abgezogen. Ihr könnt nie unter 0 Punkte fallen. Antwortet eine Gruppe falsch muss ein Gruppenmitglied einen Becher Bier/Wasser trinken, dieses Mitglied darf sich nicht mit den anderen beraten, bis der Becher leer ist, alle anderen spielen weiter.
+Es spielen zwei Gruppen gegeneinander. Jede Gruppe wählt abwechselnd eine Kategorie und Schwierigkeitsstufe. Daraufhin wird euch allen eine Antwort gezeigt und ihr (beide Gruppen) müsst die zugehörige Frage auf eure Tafel schreiben. Für jede Frage habt ihr Zeit, bis die Jeopardy Melodie abgelaufen ist. Ihr spielt für 10 Minuten und erfragt maximal 10 Antworten. Ist die gewählte Frage korrekt, bekommt ihr die zugehörige Punktzahl gutgeschrieben, sonst wird sie abgezogen. Antwortet ihr nicht, bekommt ihr 0 Punkte. Ihr könnt nie unter 0 Punkte fallen. Antwortet eine Gruppe falsch, muss ein Gruppenmitglied einen Becher Bier/Wasser trinken. Dieses Mitglied muss pausieren, bis der Becher leer ist. Alle anderen spielen weiter.
 
 \section*{Für die Spielleiter:}
 \subsection*{Requisiten:} 
@@ -207,7 +210,7 @@ Es spielen zwei Gruppen gegeneinander. Jede Gruppe wählt abwechselnd eine Kateg
 \end{itemize}
 
 \subsection*{Punkte:}
-Aufaddieren, wenn Frage gewählten Schwierigkeitsgrads richtig war, sonst abziehen.
+Aufaddieren, wenn Frage gewählten Schwierigkeitsgrads richtig war, sonst abziehen. Nicht beantwortete Fragen geben 0 Punkte.
 \subsection*{Hinweise:}
 \unten
 
@@ -222,7 +225,7 @@ Aufaddieren, wenn Frage gewählten Schwierigkeitsgrads richtig war, sonst abzieh
 
 \Large
 \section*{Für die Spieler:}
-Ihr spielt Memory. Innerhakb von 10 Minuten versucht ihr so viele Paare wie möglich zu finden. Die ersten 4 Kartenpaare die ihr aufdeckt sind frei. Danach muss einer aus der Gruppe für jedes falsch aufgedeckte Kartenpaar ein Glas Wasser/Bier trinken. Die Gruppe muss mit dem Weiterspielen warten, bis dieser fertig ist.
+Ihr spielt Memory. Innerhalb von 10 Minuten versucht ihr so viele Paare wie möglich zu finden. Die ersten 4 Kartenpaare, die ihr aufdeckt, sind frei. Danach muss einer aus der Gruppe für jedes falsch aufgedeckte Kartenpaar ein Glas Wasser/Bier trinken. Die Gruppe muss mit dem Weiterspielen warten, bis dieser fertig ist.
 
 \section*{Für die Spielleiter:}
 \subsection*{Requisiten:} 
@@ -233,7 +236,8 @@ Ihr spielt Memory. Innerhakb von 10 Minuten versucht ihr so viele Paare wie mög
  \item Becher
 \end{itemize}
 \subsection*{Punkte:}
-Anzahl der korrekt aufgedeckten Paare.
+Im Programm angezeigte Punktzahl.
+
 \subsection*{Hinweise:}
 Versucht immer schon genug Getränke eingeschenkt zu haben, um in der Zeit zu bleiben.\\
 \unten
@@ -250,7 +254,7 @@ Versucht immer schon genug Getränke eingeschenkt zu haben, um in der Zeit zu bl
 
 \Large
 \section*{Für die Spieler:}
-Ihr habt so viele Würfe, wie die größte Gruppe Teilnehmer. Jedes Gruppenmitglied wirft mindestens einmal auf das Zielfeld und eine Dosenpyramide (aus drei Dosen). Es dürfen so viele Personen mehrfach werfen, bis n-mal geworfen wurde. Jede komplett umgeworfene Dosenpyramide erhöht den Multiplikator x (zu Beginn x=1) um eins.  Die im Zielwerfen erlangten Punkte werden mit x multipliziert und ergeben die Gesamtpunktzahl.
+Ihr habt n=\underline{\hspace{1cm}} Würfe. Jedes Gruppenmitglied wirft mindestens einmal auf das Zielfeld und eine Dosenpyramide (aus drei Dosen). Es dürfen so viele Personen mehrfach werfen, bis n-mal geworfen wurde. Jede komplett umgeworfene Dosenpyramide erhöht den Multiplikator x (zu Beginn x=1) um eins. Die im Zielwerfen erlangten Punkte werden mit x multipliziert und ergeben die Gesamtpunktzahl.
 
 
 \section*{Für die Spielleiter:}
@@ -264,7 +268,7 @@ Ihr habt so viele Würfe, wie die größte Gruppe Teilnehmer. Jedes Gruppenmitgl
 \end{itemize}
 
 \subsection*{Punkte:}
-Sei x die Anzahl der komplett umgeworfenden Dosenpyramiden und y die Punkte, die im Zielwerfen werreicht werden. Die Punktzahl ist dann $(x+1)*y$. 
+Sei x die Anzahl der komplett umgeworfenden Dosenpyramiden und y die Punkte, die im Zielwerfen erreicht werden. Die Punktzahl ist dann $(x+1)y$. 
 \subsection*{Hinweise:}
 Bitte fegt Reis, der aus platzenden Säckchen fällt, auf.
 \unten
