'wird mitgeteilt' bei Ort Kleiderkette

--- a/laufzettel_rallye.tex
+++ b/laufzettel_rallye.tex
@@ -20,7 +20,7 @@
 \def\spielgg{25.22.U1.25 & Memory}
 \def\spielh{DRAUSSEN$^2$ \footnotetext[2]{zwischen 25.22.U1 und 25.33.U1} & Parabelflug}
 \def\spieli{ 25.22.U1.34 & $\Pi \times $Daumen}
-\def\spielj{ & Kleiderkette}
+\def\spielj{\textit{wird mitgeteilt} & Kleiderkette}
 \def\pause{\multicolumn{2}{|c|}{\textbf{- PAUSE -}}}
 
 
