Requisiten in Parabelwurf und Extremsport ergaenzt

--- a/spielregeln.tex
+++ b/spielregeln.tex
@@ -90,6 +90,14 @@ werden. Pro umgeworfene Voltdose werden 10 Strafsekunden zu eurer Zeit
 addiert. Zwei Teams starten gleichzeitig an gegenüberliegenden Etappen.
 
 \section*{Für die Spielleiter:}
+\subsection*{Requisiten}
+\begin{itemize}
+\item Säcke
+\item Löffel
+\item Wasserbomben
+\item 80 Dosen
+\item Kordel
+\end{itemize}
 \subsection*{Punkte:}
 Strafsekunden: 10 Sekunden/VoltDose\\
 Gemessene Zeit inklusive Strafsekunden. Je kürzer desto besser.
@@ -263,7 +271,7 @@ Ihr habt n=\underline{\hspace{1cm}} Würfe. Jedes Gruppenmitglied wirft mindeste
  \item Kreppband
  \item Tennisbälle
  \item Reissäckchen
- \item Dose
+ \item 40 Dosen
  \item Besen
 \end{itemize}
 
