Gruppen mit 12 Mitgliedern / emanzipierte PO

--- a/gruppenzettel_rallye.tex
+++ b/gruppenzettel_rallye.tex
@@ -45,8 +45,10 @@
 \parindent 0pt
 \renewcommand*\arraystretch{1.5}
 
-\begin{document}
+\geometry{a4paper, top=20mm, bottom=20mm}
 
+\begin{document}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \oben{1}
 \vspace{0.5cm}
 
@@ -68,12 +70,14 @@ Bitte tragt hier die Namen und Studienfächer der Teilnehmer eurer ersten beiden
  7&&\\ \hline
  8&&\\ \hline
  9&&\\ \hline
- 10&&\\ 
+ 10&&\\ \hline
+ 11&&\\ \hline
+ 12&&\\ 
 
 \end{tabularx}
 
-
 \newpage
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \oben{2}
@@ -97,7 +101,9 @@ Bitte tragt hier die Namen und Studienfächer der Teilnehmer eurer ersten beiden
  7&&\\ \hline
  8&&\\ \hline
  9&&\\ \hline
- 10&&\\ 
+ 10&&\\ \hline
+ 11&&\\ \hline
+ 12&&\\ 
 
 \end{tabularx}
 
@@ -126,7 +132,9 @@ Bitte tragt hier die Namen und Studienfächer der Teilnehmer eurer ersten beiden
  7&&\\ \hline
  8&&\\ \hline
  9&&\\ \hline
- 10&&\\ 
+ 10&&\\ \hline
+ 11&&\\ \hline
+ 12&&\\ 
 
 \end{tabularx}
 
@@ -155,7 +163,9 @@ Bitte tragt hier die Namen und Studienfächer der Teilnehmer eurer ersten beiden
  7&&\\ \hline
  8&&\\ \hline
  9&&\\ \hline
- 10&&\\ 
+ 10&&\\ \hline
+ 11&&\\ \hline
+ 12&&\\ 
 
 \end{tabularx}
 
@@ -184,7 +194,9 @@ Bitte tragt hier die Namen und Studienfächer der Teilnehmer eurer ersten beiden
  7&&\\ \hline
  8&&\\ \hline
  9&&\\ \hline
- 10&&\\ 
+ 10&&\\ \hline
+ 11&&\\ \hline
+ 12&&\\ 
 
 \end{tabularx}
 
@@ -213,7 +225,9 @@ Bitte tragt hier die Namen und Studienfächer der Teilnehmer eurer ersten beiden
  7&&\\ \hline
  8&&\\ \hline
  9&&\\ \hline
- 10&&\\ 
+ 10&&\\ \hline
+ 11&&\\ \hline
+ 12&&\\ 
 
 \end{tabularx}
 
@@ -243,7 +257,9 @@ Bitte tragt hier die Namen und Studienfächer der Teilnehmer eurer ersten beiden
  7&&\\ \hline
  8&&\\ \hline
  9&&\\ \hline
- 10&&\\ 
+ 10&&\\ \hline
+ 11&&\\ \hline
+ 12&&\\ 
 
 \end{tabularx}
 
@@ -272,7 +288,9 @@ Bitte tragt hier die Namen und Studienfächer der Teilnehmer eurer ersten beiden
  7&&\\ \hline
  8&&\\ \hline
  9&&\\ \hline
- 10&&\\ 
+ 10&&\\ \hline
+ 11&&\\ \hline
+ 12&&\\ 
 
 \end{tabularx}
 
@@ -302,7 +320,9 @@ Bitte tragt hier die Namen und Studienfächer der Teilnehmer eurer ersten beiden
  7&&\\ \hline
  8&&\\ \hline
  9&&\\ \hline
- 10&&\\ 
+ 10&&\\ \hline
+ 11&&\\ \hline
+ 12&&\\ 
 
 \end{tabularx}
 
@@ -330,7 +350,9 @@ Bitte tragt hier die Namen und Studienfächer der Teilnehmer eurer ersten beiden
  7&&\\ \hline
  8&&\\ \hline
  9&&\\ \hline
- 10&&\\ 
+ 10&&\\ \hline
+ 11&&\\ \hline
+ 12&&\\ 
 
 \end{tabularx}
 
@@ -361,7 +383,9 @@ Bitte tragt hier die Namen und Studienfächer der Teilnehmer eurer ersten beiden
  7&&\\ \hline
  8&&\\ \hline
  9&&\\ \hline
- 10&&\\ 
+ 10&&\\ \hline
+ 11&&\\ \hline
+ 12&&\\ 
 
 \end{tabularx}
 
@@ -391,7 +415,9 @@ Bitte tragt hier die Namen und Studienfächer der Teilnehmer eurer ersten beiden
  7&&\\ \hline
  8&&\\ \hline
  9&&\\ \hline
- 10&&\\ 
+ 10&&\\ \hline
+ 11&&\\ \hline
+ 12&&\\ 
 
 \end{tabularx}
 
@@ -423,7 +449,9 @@ Bitte tragt hier die Namen und Studienfächer der Teilnehmer eurer ersten beiden
  7&&\\ \hline
  8&&\\ \hline
  9&&\\ \hline
- 10&&\\ 
+ 10&&\\ \hline
+ 11&&\\ \hline
+ 12&&\\ 
 
 \end{tabularx}
 
@@ -455,7 +483,9 @@ Bitte tragt hier die Namen und Studienfächer der Teilnehmer eurer ersten beiden
  7&&\\ \hline
  8&&\\ \hline
  9&&\\ \hline
- 10&&\\ 
+ 10&&\\ \hline
+ 11&&\\ \hline
+ 12&&\\ 
 
 \end{tabularx}
 
@@ -486,7 +516,9 @@ Bitte tragt hier die Namen und Studienfächer der Teilnehmer eurer ersten beiden
  7&&\\ \hline
  8&&\\ \hline
  9&&\\ \hline
- 10&&\\ 
+ 10&&\\ \hline
+ 11&&\\ \hline
+ 12&&\\ 
 
 \end{tabularx}
 
@@ -517,7 +549,9 @@ Bitte tragt hier die Namen und Studienfächer der Teilnehmer eurer ersten beiden
  7&&\\ \hline
  8&&\\ \hline
  9&&\\ \hline
- 10&&\\ 
+ 10&&\\ \hline
+ 11&&\\ \hline
+ 12&&\\ 
 
 \end{tabularx}
 
@@ -548,7 +582,9 @@ Bitte tragt hier die Namen und Studienfächer der Teilnehmer eurer ersten beiden
  7&&\\ \hline
  8&&\\ \hline
  9&&\\ \hline
- 10&&\\ 
+ 10&&\\ \hline
+ 11&&\\ \hline
+ 12&&\\ 
 
 \end{tabularx}
 
@@ -580,7 +616,9 @@ Bitte tragt hier die Namen und Studienfächer der Teilnehmer eurer ersten beiden
  7&&\\ \hline
  8&&\\ \hline
  9&&\\ \hline
- 10&&\\ 
+ 10&&\\ \hline
+ 11&&\\ \hline
+ 12&&\\ 
 
 \end{tabularx}
 
