--- a/laufzettel_rallye.tex
+++ b/laufzettel_rallye.tex
@@ -52,6 +52,7 @@ Name: & \underline{\hspace{6cm}} & Name: & \underline{\hspace{6cm}}\\
 Name: & \underline{\hspace{6cm}} & Name: & \underline{\hspace{6cm}}\\
 Name: & \underline{\hspace{6cm}} & Name: & \underline{\hspace{6cm}}\\
 Name: & \underline{\hspace{6cm}} & Name: & \underline{\hspace{6cm}}\\
+Name: & \underline{\hspace{6cm}} & Name: & \underline{\hspace{6cm}}\\
 \end{tabularx}
 
 
