--- a/pruefungsordnung.tex
+++ b/pruefungsordnung.tex
@@ -21,9 +21,9 @@
 
 \pagestyle{empty}
 
-\title{Offizielle Prüfungsordnung zur ESAG-Rallye}
+\title{Prüfungsordnung der ESAG-Rallye}
 \author{Fachschaften Informatik, Mathematik, (medizinische) Physik}
-\date{05.10.2011}
+\date{06.10.2011}
 
 
 \begin{document}
@@ -37,11 +37,11 @@
 
 \subsection{Umfang der Rallye und Punktevergabe}
 
-Die ESAG-Rallye umfasst in diesem Jahr zehn Prüfungen. Alle Teilnehmer
-werden vorab in Gruppen eingeteilt, die bezüglich Alter, Geschlecht und
+Die ESAG-Rallye umfasst in diesem Jahr zehn Prüfungen. Alle Teilnehmerinnen 
+und Teilnehmer werden vorab in Gruppen eingeteilt, die bezüglich Alter, Geschlecht und
 Studienfach so ausgewogen wie möglich von den drei veranstaltenden
-Fachschaftsräten gebildet werden. Die Anzahl der Teilnehmer pro Gruppe
- wird anhand der totalen Teilnehmerzahl spontan bestimmt.
+Fachschaftsräten gebildet werden. Die Anzahl der Teilnehmerinnen und Teilnehmer pro Gruppe
+wird anhand der Anzahl aller Teilnehmerinnen und Teilnehmer spontan bestimmt.
 
 \begin{wrapfigure}{l}{0.19\textwidth}
 \begin{tabular}{c|c}
@@ -69,7 +69,12 @@ Fachschaftsräten gebildet werden. Die Anzahl der Teilnehmer pro Gruppe
 \vspace{15pt}
 \end{wrapfigure}
 
-Den Teilnehmern wird für jede Station ein Zeitraum von 20 Minuten gegeben. Innerhalb dieses Zeitraums muss auch der Raumwechsel sowie die Erklärung der Spielregeln erfolgen. Zwischen 13 und 14 Uhr ist eine Pause vorgesehen, der Zeitpunkt kann dem invidiuellen Laufzettel entnommen werden. Die Prüfungen müssen zu den auf dem Laufzettel vorgegebenen Zeitpunkten angetreten werden.
+Den Teilnehmerinnen und Teilnehmern wird für jede Station ein Zeitraum 
+von 20 Minuten eingeräumt. Innerhalb dieses Zeitraums muss auch der 
+Raumwechsel sowie die Erklärung der Spielregeln erfolgen. Zwischen 
+13 und 14 Uhr ist eine Pause vorgesehen. Der genaue Zeitpunkt der Pause 
+kann dem invidiuellen Laufzettel entnommen werden. Die Prüfungen müssen 
+zu den auf dem Laufzettel vorgegebenen Zeitpunkten angetreten werden.
 
 
 Die Punktevergabe erfolgt erst im Anschluss an die Rallye. Für jede
@@ -95,7 +100,8 @@ werden ohne Kenntnis der jeweils anderen Schätzungen abgegeben.
 
 \subsection{Teilnahmebedingungen}
 
-Teilnahmeberechtigt sind alle Studierenden, die zum Wintersemester 2011/2012 zum ersten Mal ein Studium der
+Teilnahmeberechtigt sind alle Studierenden, die zum Wintersemester 
+2011/2012 zum ersten Mal ein Studium der
 Informatik, der Mathematik, der Physik oder der medizinischen Physik an
 der Heinrich-Heine-Universität in Düsseldorf beginnen und zum Zeitpunkt
 der Rallye das 16. Lebensjahr vollendet haben.
@@ -108,29 +114,36 @@ verzichten. Die Teilnahme an der Rallye ohne ein Handtuch ist grob
 fahrlässig.
 
 Trotz größtmöglicher Sorgfalt in der Vorbereitung und Durchführung der
-Rallye sind die Teilnehmer für ihr Wohlergehen jederzeit selbst
-verantwortlich. Unterstützt werden die Teilnehmer durch die Möglichkeit
-des Konsums diverser Nahrungsmittel. Im Anschluss an die Rallye steht frisch Gegrilltes zur Verfügung.
+Rallye sind die Teilnehmerinnen und Teilnehmer für ihr Wohlergehen 
+jederzeit selbst verantwortlich. Unterstützt werden die Teilnehmerinnen
+und Teilnehmer durch die Möglichkeit des Konsums diverser Nahrungsmittel. 
+Im Anschluss an die Rallye steht frisch Gegrilltes zur Verfügung.
 
-Art und Umfang der Rallye können vom Veranstalter zu jeder Zeit geändert
-werden. Ein Anspruch auf Teilnahme seitens der Teilnehmer besteht nicht.
+Art und Umfang der Rallye können von den veranstaltenden Fachschaftsräten
+zu jeder Zeit geändert werden. Ein Anspruch auf Teilnahme seitens der 
+Teilnehmerinnen und Teilnehmer besteht nicht.
 
 \subsection{Prüfungszulassung}
 
-Für die Zulassung zu den einzelnen Teilprüfungen ist ein Laufzettel erfoderlich, der zu Beginn der Rallye an jede Gruppe ausgeteilt wird.
+Für die Zulassung zu den einzelnen Teilprüfungen ist ein Laufzettel erfoderlich, 
+der zu Beginn der Rallye an jede Gruppe ausgeteilt wird.
 
 \subsection{Beteiligungsnachweise}
 
 
 Die erzielten Prüfungsleistungen werden auf elektronischem Weg an das
-Prüfungsamt übermittelt. Zusätzlich ist die erreichte Punktzahl auf dem Laufzettel einzutragen und vom jeweiligen Prüfer abzustempeln. Der Laufzettel wird nach der neunten Teilprüfung an den Prüfer der aktuellen Teilprüfung gegeben.
+Prüfungsamt übermittelt. Zusätzlich ist die erreichte Punktzahl auf dem 
+Laufzettel der Gruppe einzutragen und von der jeweiligen Prüferin oder dem
+jeweiligen Prüfer abzustempeln. 
+Der Laufzettel wird nach der neunten Teilprüfung an die Prüferin oder den Prüfer 
+der aktuellen Teilprüfung gegeben.
 
 Gefälschte Prüfungsnachweise können zur Disqualifikation führen.
 
 \subsection{Regelverletzungen}
 
-Regeln gelten als solche, sobald sie durch einen der Fachschaftsräte der
-drei veranstaltenden Fachschaften bekannt gemacht werden. Inhalte dieser
+Regeln gelten als solche, sobald sie durch ein Mitglied der drei 
+veranstaltenden Fachschaftsräte bekannt gemacht werden. Inhalte dieser
 Prüfungsordnung gelten als Regeln. Eine Verletzung der Regeln kann zur
 Disqualifikation führen. Wer sich unfair gegenüber anderen Teilnehmern
 verhält, verstößt gegen die Regeln. Eine ungültige Regel beeinträchtigt
@@ -140,14 +153,27 @@ nicht die Gültigkeit anderer Regeln.
 
 \section{Beginn der Rallye}
 
-Die ESAG-Rallye 2011 beginnt spätestens jetzt. Sollte dieser Prüfungsordnung kein Laufzettel beiliegen, wenden sich die Teilnehmer an einen der Verantwortlichen. Die Teilnehmer begeben sich sofort und nicht erst zum angegebenen Zeitpunkt zur ersten Teilprüfung.
+Die ESAG-Rallye 2011 beginnt spätestens jetzt. Sollte dieser Prüfungsordnung
+kein Laufzettel beiliegen, haben sich die Teilnehmerinnen und Teilnehmer an 
+einen der Verantwortlichen. Die Teilnehmerinnen und Teilnehmer begeben sich 
+sofort und nicht erst zum angegebenen Zeitpunkt zur ersten Teilprüfung.
 
 \section{Ablauf der Rallye}
-Nach Beginn der Rallye und dem Besuch der ersten Teilprüfung werden alle weiteren Teilprüfungen zu dem auf dem Laufzettel vorgegebenen Zeitpunkt angetreten. Verspätet sich eine Teilnehmergruppe sind die jeweiligen Prüfer und Prüferinnen zum Ausschluss von der Teilprüfung berechtigt. Dies gilt insbesondere dann, wenn durch die Verzögerung weitere Verzögerungen im Ablauf abzusehen sind. Im Anschluss an die neunte Teilprüfung werden die Teilnehmer zur abschließenden Prüfung und zur Bekanntgabe der Ergebnisse in einen Hörsaal gebracht. Die Teilnahme am nachfolgenden Grillen ist nicht obligatorisch, wird aber durch das Prüfungsamt empfohlen.
+Nach Beginn der Rallye und dem Besuch der ersten Teilprüfung werden alle 
+weiteren Teilprüfungen zu den auf dem Laufzettel vorgegebenen Zeitpunkten 
+angetreten. Verspätet sich eine Teilnehmergruppe sind die jeweiligen Prüferinnen
+und Prüfer berechtigt, die Gruppe von der Teilprüfung auszuschließen. Dies 
+gilt insbesondere dann, wenn durch die Verzögerung weitere Verzögerungen im 
+Ablauf zu erwarten sind. Im Anschluss an die neunte Teilprüfung werden die 
+Teilnehmerinnen und Teilnehmer zur abschließenden Prüfung und zur Bekanntgabe 
+der Ergebnisse in einen Hörsaal gebracht. Die Teilnahme am nachfolgenden 
+Grillen ist nicht obligatorisch, wird aber durch das Prüfungsamt empfohlen.
 
 \section[Informationen]{Wichtige Informationen}
 \subsection{Kennzeichnung der Prüfungsorte }
-Alle Prüfungsorte sind durch Luftballons an ihren Eingängen kenntlich gemacht. Zu einigen Prüfungen existieren mehrere Prüfungsorte. Welchen Prüfungsort die Teilnehmer aufsuchen müssen, entnehmen sie ihren Laufzetteln.
+Alle Prüfungsorte sind durch Luftballons an ihren Eingängen kenntlich gemacht. 
+Zu einigen Prüfungen existieren mehrere Prüfungsorte. Welchen Prüfungsort die 
+Teilnehmerinnen und Teilnehmer aufsuchen müssen, entnehmen sie ihren Laufzetteln.
 
 \subsection{Veranstaltende Fachschaften}
 
