--- a/spielregeln.tex
+++ b/spielregeln.tex
@@ -195,7 +195,39 @@ $$\sum\limits_{i=1}^{10}i \cdot |\mbox{Mitspieler in Runde} (i+1)|$$
 \unten
 
 \newpage
+%%%Inverses
 
+  \begin{tabularx}{\textwidth}{lc}
+    \includegraphics[width=0.2\textwidth]{hhulogo_g}
+  & {\Huge \textbf{Spielregeln: \spiele}}
+  \end{tabularx}\\
+
+\Large
+\section*{Für die Spieler:}
+Es gibt zwei Spielleiter und drei Aktionen mit zugehöriger gegenteiliger Aktion: 
+\begin{itemize}
+ \item Hut an- oder ausziehen
+ \item trinken oder nicht trinken
+ \item sitzen oder stehen
+\end{itemize}
+Ihr spielt 10 Minuten. Einer der Spielleiter macht euch eine beliebige Abfolge dieser Aktionen vor und ihr müsst immer das Gegenteil tun. Der andere Spielleiter stoppt dies nach einer pro Runde länger werdenden Zeit. Jeder muss zu diesem Zeitpunkt erstarren. Alle, die nicht genau das Gegenteil von dem tun, was der Spielleiter gerade tut scheiden aus. Eure Punkte bekommt ihr nach folgender Formel:\\
+$$\sum\limits_{i=1}^{10}i \cdot |\mbox{Mitspieler in Runde}  (i+1)|$$
+
+
+\section*{Für die Spielleiter:}
+\subsection*{Requisiten:}
+\begin{itemize}
+ \item Becher und Getränke
+ \item Zeitungshüte
+ \item Stühle 
+\end{itemize}
+\subsection*{Punkte:}
+$$\sum\limits_{i=1}^{10}i \cdot |\mbox{Mitspieler in Runde} (i+1)|$$
+
+\subsection*{Hinweise:}
+\unten
+
+\newpage
 %%%Jeopardy
 
   \begin{tabularx}{\textwidth}{lc}
@@ -220,6 +252,34 @@ Es spielen zwei Gruppen gegeneinander. Jede Gruppe wählt abwechselnd eine Kateg
 \subsection*{Punkte:}
 Aufaddieren, wenn Frage gewählten Schwierigkeitsgrads richtig war, sonst abziehen. Nicht beantwortete Fragen geben 0 Punkte.
 \subsection*{Hinweise:}
+\unten
+
+\newpage
+
+%%%Memory
+
+  \begin{tabularx}{\textwidth}{lc}
+    \includegraphics[width=0.2\textwidth]{hhulogo_g}
+  & {\Huge \textbf{Spielregeln: \spielg}}
+  \end{tabularx}\\
+
+\Large
+\section*{Für die Spieler:}
+Ihr spielt Memory. Innerhalb von 10 Minuten versucht ihr so viele Paare wie möglich zu finden. Die ersten 4 Kartenpaare, die ihr aufdeckt, sind frei. Danach muss einer aus der Gruppe für jedes falsch aufgedeckte Kartenpaar ein Glas Wasser/Bier trinken. Die Gruppe muss mit dem Weiterspielen warten, bis dieser fertig ist.
+
+\section*{Für die Spielleiter:}
+\subsection*{Requisiten:} 
+\begin{itemize}
+ \item Laptop
+ \item Beamer
+ \item Getränke
+ \item Becher
+\end{itemize}
+\subsection*{Punkte:}
+Im Programm angezeigte Punktzahl.
+
+\subsection*{Hinweise:}
+Versucht immer schon genug Getränke eingeschenkt zu haben, um in der Zeit zu bleiben.\\
 \unten
 
 \newpage
