--- a/stationen_rallye.tex
+++ b/stationen_rallye.tex
@@ -175,26 +175,26 @@
   \begin{center}
     \vspace{1cm} 
     Ort: \raume
-  \end{center}
+
     \vspace{2cm} 
-    \begin{tabularx}{\textwidth}{X||X|X||X|X}
-	\textbf{Zeit} &\textbf{Gruppe} & \textbf{Ergebnis} &\textbf{Gruppe} & \textbf{Ergebnis}  	\\ \hline \hline
-	12:00 &	5	&	&14	&	\\ \hline
-	12:20 &	4	&	&15	&	\\ \hline
-	12:40 &	3	&	&16	&	\\ \hline
+    \begin{tabularx}{0.6\textwidth}{X||X|X}
+	\textbf{Zeit} &\textbf{Gruppe} & \textbf{Ergebnis} \\ \hline \hline
+	12:00 &	5	&	\\ \hline
+	12:20 &	4	&	\\ \hline
+	12:40 &	3	&	\\ \hline
 
-	13:00 &	7	&	&12	&	\\ \hline
-	13:20 &	13	&	&	&	\\ \hline
-	13:40 &		&	&6	&	\\ \hline
+	13:00 &	7	&	\\ \hline
+	13:20 &	13	&	\\ \hline
+	13:40 &		&	\\ \hline
 
-	14:00 &	2	&	&17	&	\\ \hline
-	14:20 &	1	&	&18	&	\\ \hline
-	14:40 &	9	&	&10	&	\\ \hline
+	14:00 &	2	&	\\ \hline
+	14:20 &	1	&	\\ \hline
+	14:40 &	9	&	\\ \hline
 
-	15:00 &	8	&	&11	&	\\ \hline
+	15:00 &	8	&	\\ \hline
       
     \end{tabularx}
-   
+     \end{center}
    \newpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%Inverses B%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   \begin{tabularx}{\textwidth}{lc}
@@ -205,26 +205,26 @@
   \begin{center}
     \vspace{1cm} 
     Ort: \raumee
-  \end{center}
+  
     \vspace{2cm} 
-    \begin{tabularx}{\textwidth}{X||X|X||X|X}
-	\textbf{Zeit} &\textbf{Gruppe} & \textbf{Ergebnis} &\textbf{Gruppe} & \textbf{Ergebnis}  	\\ \hline \hline
-	12:00 &	5	&	&14	&	\\ \hline
-	12:20 &	4	&	&15	&	\\ \hline
-	12:40 &	3	&	&16	&	\\ \hline
+    \begin{tabularx}{0.6\textwidth}{X||X|X}
+	\textbf{Zeit} &\textbf{Gruppe} & \textbf{Ergebnis} 	\\ \hline \hline
+	12:00 &14	&	\\ \hline
+	12:20 &15	&	\\ \hline
+	12:40 &16	&	\\ \hline
 
-	13:00 &	7	&	&12	&	\\ \hline
-	13:20 &	13	&	&	&	\\ \hline
-	13:40 &		&	&6	&	\\ \hline
+	13:00 &12	&	\\ \hline
+	13:20 &		&	\\ \hline
+	13:40 &	6	&	\\ \hline
 
-	14:00 &	2	&	&17	&	\\ \hline
-	14:20 &	1	&	&18	&	\\ \hline
-	14:40 &	9	&	&10	&	\\ \hline
+	14:00 &	17	&	\\ \hline
+	14:20 &	18	&	\\ \hline
+	14:40 &	10	&	\\ \hline
 
-	15:00 &	8	&	&11	&	\\ \hline
+	15:00 &	11	&	\\ \hline
       
     \end{tabularx}
-   
+   \end{center}
    \newpage
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%Jeopardy%%%%%%%%%%%%%%%%%%%%%%%%
@@ -267,26 +267,26 @@
   \begin{center}
     \vspace{1cm} 
     Ort: \raumg
-  \end{center}
+ 
     \vspace{2cm} 
-    \begin{tabularx}{\textwidth}{X||X|X||X|X}
-	\textbf{Zeit} &\textbf{Gruppe} & \textbf{Ergebnis} &\textbf{Gruppe} & \textbf{Ergebnis}  	\\ \hline \hline
-	12:00 &	7	&	&16	&	\\ \hline
-	12:20 &	6	&	&17	&	\\ \hline
-	12:40 &	5	&	&18	&	\\ \hline
+    \begin{tabularx}{0.6\textwidth}{X||X|X}
+	\textbf{Zeit} &\textbf{Gruppe} & \textbf{Ergebnis} \\ \hline \hline
+	12:00 &	7	&	\\ \hline
+	12:20 &	6	&	\\ \hline
+	12:40 &	5	&	\\ \hline
 
-	13:00 &	8	&	&9	&	\\ \hline
-	13:20 &	14	&	&15	&	\\ \hline
-	13:40 &		&	&	&	\\ \hline
+	13:00 &	8	&	\\ \hline
+	13:20 &	14	&	\\ \hline
+	13:40 &		&	\\ \hline
 
-	14:00 &	4	&	&10	&	\\ \hline
-	14:20 &	3	&	&11	&	\\ \hline
-	14:40 &	2	&	&12	&	\\ \hline
+	14:00 &	4	&	\\ \hline
+	14:20 &	3	&	\\ \hline
+	14:40 &	2	&	\\ \hline
 
-	15:00 &	1	&	&13	&	\\ \hline
+	15:00 &	1	&	\\ \hline
       
     \end{tabularx}
-   
+   \end{center} 
    \newpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%Memory B%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   \begin{tabularx}{\textwidth}{lc}
@@ -297,26 +297,26 @@
   \begin{center}
     \vspace{1cm} 
     Ort: \raumgg
-  \end{center}
+
     \vspace{2cm} 
-    \begin{tabularx}{\textwidth}{X||X|X||X|X}
-	\textbf{Zeit} &\textbf{Gruppe} & \textbf{Ergebnis} &\textbf{Gruppe} & \textbf{Ergebnis}  	\\ \hline \hline
-	12:00 &	7	&	&16	&	\\ \hline
-	12:20 &	6	&	&17	&	\\ \hline
-	12:40 &	5	&	&18	&	\\ \hline
+    \begin{tabularx}{0.6\textwidth}{X||X|X}
+	\textbf{Zeit} &\textbf{Gruppe} & \textbf{Ergebnis}	\\ \hline \hline
+	12:00 &	16	&	\\ \hline
+	12:20 &	17	&	\\ \hline
+	12:40 & 18	&	\\ \hline
 
-	13:00 &	8	&	&9	&	\\ \hline
-	13:20 &	14	&	&15	&	\\ \hline
-	13:40 &		&	&	&	\\ \hline
+	13:00 &	9	&	\\ \hline
+	13:20 &	15	&	\\ \hline
+	13:40 &		&	\\ \hline
 
-	14:00 &	4	&	&10	&	\\ \hline
-	14:20 &	3	&	&11	&	\\ \hline
-	14:40 &	2	&	&12	&	\\ \hline
+	14:00 & 10	&	\\ \hline
+	14:20 &	11	&	\\ \hline
+	14:40 &	12	&	\\ \hline
 
-	15:00 &	1	&	&13	&	\\ \hline
+	15:00 &	13	&	\\ \hline
       
     \end{tabularx}
-   
+    \end{center} 
    \newpage
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%Parabelflug%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
