--- a/fuehrungen.tex
+++ b/fuehrungen.tex
@@ -12,7 +12,7 @@
 \pagestyle{empty}
 
 
-\geometry{a4paper, top=20mm, left=20mm, right=20mm, bottom=20mm}
+\geometry{a4paper, top=10mm, left=20mm, right=20mm, bottom=10mm}
 \renewcommand*\arraystretch{1.5}
 
 
@@ -58,11 +58,12 @@
  Bafög Amt & 21.12.01 & \\
  Prüfungsamt & 16.11.O4 &
 \end{tabularx}
+\vspace{5mm}
 
-Liefert die Erstis nach den Führungen bitte in folgenden Hörsälen ab:\\ \vspace{\baselineskip}
+\textbf{Liefert die Erstis nach den Führungen (spätestens 15:45 Uhr) bitte in folgenden Hörsälen ab:}\\ \vspace{\baselineskip}
 \hspace{-4mm}
 \begin{tabularx}{\textwidth}{p{0.3\textwidth}p{0.3\textwidth}p{0.3\textwidth}}
-Informatik:5 & Physik: 5 & Mathe: 
+Informatik:5E & Physik: 5M & Mathe: 5H
 \end{tabularx}
 
 \end{document}
