Update dates from pruefungsordnung.tex to 2014 and add missing word.

--- a/src/pruefungsordnung.tex
+++ b/src/pruefungsordnung.tex
@@ -23,7 +23,7 @@
 
 \title{Prüfungsordnung der ESAG-Rallye}
 \author{Fachschaften Informatik, Mathematik, (medizinische) Physik}
-\date{06.10.2011}
+\date{Gültig am 08.10.2014}
 
 
 \begin{document}
@@ -101,7 +101,7 @@ werden ohne Kenntnis der jeweils anderen Schätzungen abgegeben.
 \subsection{Teilnahmebedingungen}
 
 Teilnahmeberechtigt sind alle Studierenden, die zum Wintersemester 
-2011/2012 zum ersten Mal ein Studium der
+2014/2015 zum ersten Mal ein Studium der
 Informatik, der Mathematik, der Physik oder der medizinischen Physik an
 der Heinrich-Heine-Universität in Düsseldorf beginnen und zum Zeitpunkt
 der Rallye das 16. Lebensjahr vollendet haben.
@@ -153,10 +153,11 @@ nicht die Gültigkeit anderer Regeln.
 
 \section{Beginn der Rallye}
 
-Die ESAG-Rallye 2011 beginnt spätestens jetzt. Sollte dieser Prüfungsordnung
+Die ESAG-Rallye 2014 beginnt spätestens jetzt. Sollte dieser Prüfungsordnung
 kein Laufzettel beiliegen, haben sich die Teilnehmerinnen und Teilnehmer an 
-einen der Verantwortlichen. Die Teilnehmerinnen und Teilnehmer begeben sich 
-sofort und nicht erst zum angegebenen Zeitpunkt zur ersten Teilprüfung.
+einen der Verantwortlichen zu wenden. Die Teilnehmerinnen und Teilnehmer
+begeben sich sofort und nicht erst zum angegebenen Zeitpunkt zur ersten
+Teilprüfung.
 
 \section{Ablauf der Rallye}
 Nach Beginn der Rallye und dem Besuch der ersten Teilprüfung werden alle 
